# mc-honeypot

./: Cargo.toml  README.md  status_resp.json
src/: lib.rs  main.rs
