[package]
name = "mc-honeypot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
uuid = { version = "1.18.1", features = ["v3"] }
serde_json = "1.0"
base64 = "0.22.1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"]}
tokio-util = "0.7.16"